--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".CalculatorActivity"
-            android:label="@string/app_name" />
-        <activity android:name=".About" />
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".About"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".AdvanceCalculatorActivity"
             android:label="@string/title_activity_advence_calculator"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
